test/types/locale/bradc/createNewLocale.good
createNewLocale.chpl:1: error: halt reached - locales cannot be created
